manifests/gateway-h2c.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-app-h2c
  namespace: echo-app
spec:
  parentRefs:
  - name: cilium-gateway
    namespace: kube-system
  hostnames:
  - "echo-h2c.127.0.0.1.sslip.io"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: echo-app-h2c
      namespace: echo-app
      port: 8080
