manifests/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
  namespace: kube-system
spec:
  gatewayClassName: cilium
  listeners:
  - name: http
    protocol: HTTP
    port: 8080
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    protocol: HTTPS
    port: 8444
    tls:
      mode: Terminate
      certificateRefs:
      - name: echo-https-cert
        namespace: kube-system
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-app
  namespace: echo-app
spec:
  parentRefs:
  - name: cilium-gateway
    namespace: kube-system
  hostnames:
  - "echo.127.0.0.1.sslip.io"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: echo-app
      namespace: echo-app
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-app-https-plain
  namespace: echo-app
spec:
  parentRefs:
  - name: cilium-gateway
    namespace: kube-system
    sectionName: https
  hostnames:
  - "echo-https-plain.127.0.0.1.sslip.io"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: echo-app
      namespace: echo-app
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-app-https
  namespace: echo-app
spec:
  parentRefs:
  - name: cilium-gateway
    namespace: kube-system
    sectionName: https
  hostnames:
  - "echo-https.127.0.0.1.sslip.io"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: echo-app
      namespace: echo-app
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-app-https-h2c
  namespace: echo-app
spec:
  parentRefs:
  - name: cilium-gateway
    namespace: kube-system
    sectionName: https
  hostnames:
  - "echo-https-h2c.127.0.0.1.sslip.io"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: echo-app-h2c
      namespace: echo-app
      port: 8080
